INPUT/TEXTAREA elements: Fix incorrect selectionStart/selectionEnd values after blur.

We failed to update selectionStart/selectionEnd cache because
TextControlElement::SelectionChanged() is not called in some cases after
crrev.com/450370.

After this CL, selection values are cached in webkitEditableContentChanged event
handling code too.  It is called on every DOM mutation in text control editor.

BUG=714425

Review-Url: https://codereview.chromium.org/2878613002
Cr-Commit-Position: refs/heads/master@{#471290}

Former-commit-id: e71aa45ab3098edca75725a658d3624f5ed47108